--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -5,9 +5,6 @@
     "block.eln2.resistor": "Resistor",
     "block.eln2.wire": "Wire",
     "block.eln2.ground": "Ground",
-    "block.eln2.capacitor": "Capacitor",
-    "block.eln2.inductor": "Inductor",
-    "block.eln2.diode": "Diode",
     "block.eln2.12v_battery": "12V Battery",
     "block.eln2.light": "Light",
     "block.eln2.solar_light": "Solar Light",
@@ -15,32 +12,25 @@
 
     "item.eln2.voltmeter": "Voltmeter",
 
-    "plotter.eln2.circuit_explorer": "Circuit Explorer",
-    "plotter.eln2.cell_count": "Cell Count",
-    "plotter.eln2.highlighted": "Highlighted",
-    "plotter.eln2.solve_time": "Solve Time",
-    "plotter.eln2.type": "Type",
+    "waila.eln2.Temperature": "Temperature",
+    "waila.eln2.Potential": "Potential",
+    "waila.eln2.Current": "Current",
+    "waila.eln2.Resistance": "Resistance",
+    "waila.eln2.Capacitance": "Capacitance",
+    "waila.eln2.Inductance": "Inductance",
+    "waila.eln2.Energy": "Energy",
+    "waila.eln2.Power": "Power",
+    "waila.eln2.Mass": "Mass",
+    "waila.eln2.charge": "Charge",
+    "waila.eln2.integrity": "Integrity",
+    "waila.eln2.fuel_mass": "Fuel Amount",
 
-    "plotter.eln2.voltage": "Voltage",
-    "plotter.eln2.current": "Current",
-    "plotter.eln2.resistance": "Resistance",
-    "plotter.eln2.capacitance": "Capacitance",
-    "plotter.eln2.inductance": "Inductance",
-    "plotter.eln2.energy": "Energy",
-    "plotter.eln2.power": "Power",
-    "plotter.eln2.mode": "Mode",
+    "waila.eln2.fuel_remaining": "Remaining Fuel",
+    "waila.eln2.energy_remaining": "Remaining Energy",
 
-    "waila.eln2.voltage": "Voltage",
-    "waila.eln2.current": "Current",
-    "waila.eln2.resistance": "Resistance",
-    "waila.eln2.capacitance": "Capacitance",
-    "waila.eln2.inductance": "Inductance",
-    "waila.eln2.energy": "Energy",
-    "waila.eln2.power": "Power",
-    "waila.eln2.mode": "Mode",
+    "waila.eln2.Irradiance": "Irradiance",
+
+    "waila.eln2.Mode": "Mode",
     "config.jade.plugin_eln2.component_display": "ELN2",
-    "gui.eln2.save": "Save",
-
-    "misc.eln2.acknowledge_analytics": "By default, Electrical Age 2 reports analytics to the mod author(s). If you wish to opt-out, please edit your config file. This message will not show again for 1 month.",
-    "misc.eln2.analytics_save_failure": "We were unable to save the analytics acknowledgement file. You will continue to be notified on each startup until the error is resolved. See your logs for more information"
+    "gui.eln2.save": "Save"
 }
