--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -27,6 +27,7 @@
 
     "waila.eln2.fuel_remaining": "Remaining Fuel",
     "waila.eln2.energy_remaining": "Remaining Energy",
+    "waila.eln2.progress": "Progress",
 
     "waila.eln2.Irradiance": "Irradiance",
 
