--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -29,6 +29,9 @@
     "waila.eln2.Inductance": "Inductance",
     "waila.eln2.Energy": "Energy",
     "waila.eln2.Power": "Power",
+    "waila.eln2.power_output": "Power Output",
+    "waila.eln2.power_dissipated": "Dissipated Power",
+    "waila.eln2.thermal_power": "Thermal Power",
     "waila.eln2.Mass": "Mass",
     "waila.eln2.charge": "Charge",
     "waila.eln2.integrity": "Integrity",
